improve misisons UI

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -38,8 +38,8 @@
                 <div class="relative group">
                     <i class="fa-solid fa-search absolute left-3 top-3 md:top-3.5 text-slate-400 transition-colors group-focus-within:text-emerald-400"></i>
                     <input type="text" id="searchInput" placeholder="Find Character or Mission..."
-                        class="w-full bg-slate-900 border border-slate-600 rounded-lg py-2.5 md:py-3 pl-10 pr-4 focus:outline-none focus:border-emerald-500 focus:ring-2 focus:ring-emerald-500/20 transition-all text-sm shadow-inner placeholder-slate-500">
-                    <div class="absolute right-3 top-3 md:top-3.5 text-[10px] text-slate-600 hidden md:block">Ctrl+K</div>
+                        class="w-full bg-slate-900 border border-slate-600 rounded-lg py-2.5 md:py-3 pl-10 pr-20 md:pr-16 focus:outline-none focus:border-emerald-500 focus:ring-2 focus:ring-emerald-500/20 transition-all shadow-inner placeholder-slate-500" style="font-size: 16px;">
+                    <div class="absolute right-3 top-3 md:top-3.5 text-[10px] text-slate-600 hidden md:block border border-slate-700 px-1.5 rounded">Ctrl+K</div>
                 </div>
             </div>
 
