--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-slate-900 text-slate-200 font-sans flex flex-col overflow-hidden" style="height: 100dvh; height: 100vh;">
+<body class="bg-slate-900 text-slate-200 font-sans flex flex-col overflow-hidden">
 
     <!-- Header -->
     <header class="bg-gradient-to-r from-slate-800 to-slate-900 border-b border-slate-700 p-3 md:p-4 shadow-lg z-10 flex items-center justify-between">
